Fix footer so that it wraps correctly on narrow screens

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -17,10 +17,11 @@
 
 .footer-container {
   position: fixed;
+  flex-wrap: wrap;
   left: 0;
   right: 0;
   bottom: 0;
-  height: 2em;
+  // height: 2em;
   display: flex;
   justify-content: space-between;
   background: $globalLinearGradient3;
